[package]
name = "fap-dl"
author = "eshdownbad <61537298+eshdownbad@users.noreply.github.com>"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = "0.11.17"
thiserror = "1.0.40"
tl = "0.7.7"
tokio = { version = "1.28.1", features = ["full"] }
